@@ -1,0 +1,1 @@
+ALTER TABLE TESTTABLE ADD AT5 varchar(5) NOT NULL;
