@@ -1,0 +1,1 @@
+ALTER TABLE TESTTABLE2 ADD CONSTRAINT REL_1 FOREIGN KEY (PK1,PK2) REFERENCES TESTTABLE1(PK1,PK2) ON DELETE CASCADE ON UPDATE CASCADE;
