@@ -1,0 +1,10 @@
+CREATE TABLE TESTTABLE (
+    PK1 varchar(10) NOT NULL,
+    PK2 integer NOT NULL DEFAULT 42,
+    AT1 varchar(5),
+    AT2 varchar(5) NOT NULL,
+    AT3 varchar(5)
+);
+ALTER TABLE TESTTABLE ADD CONSTRAINT TESTTABLE_PK PRIMARY KEY(PK1,PK2);
+CREATE INDEX TESTTABLE_IDX1 ON TESTTABLE (AT2);
+CREATE UNIQUE INDEX TESTTABLE_IDX2 ON TESTTABLE (AT3);
