@@ -1,0 +1,1 @@
+ALTER TABLE TESTTABLE1 DROP COLUMN AT1;
