@@ -1,0 +1,1 @@
+ALTER TABLE TESTTABLE RENAME TO TESTTABLE1;
